# simulador-trafico-rs

./: .gitignore  Cargo.toml  README.md
documentation/: architecture.md  documentacion_consolidada.md  idea-motor.md  idea-simulador.md  idea-visualizador.md  idea.md  plan-integracion.md  plan-motor.md  plan-simulador.md  plan-visualizador.md  plan.md
legacy/generation/: mod.rs
legacy/integration/: codec.rs  commands.rs  mod.rs
legacy/model/: graph.rs  invariants.rs  scenario.rs  vehicle.rs
legacy/persistence/: file_store.rs  migrations.rs
legacy/simulation/: routing.rs  tick.rs
src/: lib.rs  main.rs  model.rs  scenario.rs  simulation.rs
src/app/: bootstrap.rs  clock.rs  composition.rs  mod.rs  runtime.rs
src/generation/: builders.rs  fixtures.rs  loaders.rs  mod.rs  scenario_factory.rs
src/integration/: delta.rs  events.rs  protocol.rs  snapshots.rs
src/model/: ids.rs  mod.rs  network.rs  node.rs  road.rs  routing.rs  signal.rs  state.rs  vehicle.rs
src/persistence/: mod.rs  serializer.rs
src/presentation/: app_shell.rs  canvas.rs  components.rs  console.rs  controls.rs  mod.rs  simulator_shell.rs  theme.rs  view_model.rs
src/presentation/panels/: mod.rs
src/presentation/render/: mod.rs
src/presentation/tools/: mod.rs
src/simulation/: conflicts.rs  engine.rs  events.rs  lifecycle.rs  metrics.rs  mod.rs  movement.rs  queues.rs  routing.rs  runtime.rs  signals.rs  spawn.rs  timing.rs  validation.rs
src/ui/screens/: mod.rs
src/ui/screens/menu/: mod.rs
src/ui/screens/simulator/: mod.rs
tests/: smoke.rs
(+23 files in other folders)
