[package]
name = "simulador_trafico"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.27"
eframe = { version = "0.27", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
egui-multiwin = "0.5.2"

# Time/Input handling
instant = "0.1"
chrono = "0.4"
clipper2-rust = "1.0.3"


[dev-dependencies]
tempfile = "3"
